--- a/index.html
+++ b/index.html
@@ -175,72 +175,108 @@
         class="hero-image"
       />
     </header>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, modi
-      dolorum? Beatae quae saepe, enim aspernatur facere quos! Enim, laudantium.
-      Consequuntur impedit nisi beatae, obcaecati similique a rerum sint totam
-      quae earum est voluptatibus reiciendis ab dolor nemo exercitationem! Eos
-      similique quidem, ad, voluptatibus accusantium quae sunt est magni
-      repellat, culpa eum id et molestias consequuntur impedit! Cum dolor
-      aliquid sed maxime accusamus repellat asperiores rem modi aperiam amet
-      temporibus natus deleniti reprehenderit obcaecati iure ipsa, a velit
-      recusandae! Earum sint incidunt dignissimos nesciunt veritatis molestiae
-      illo expedita quaerat velit atque, perferendis modi voluptatibus
-      laudantium, aut, excepturi reiciendis vitae accusamus? Lorem ipsum dolor
-      sit, amet consectetur adipisicing elit. Expedita, accusantium saepe harum
-      molestiae illum, consequuntur laudantium consectetur, illo maxime beatae
-      totam veritatis quibusdam vero dignissimos amet tempora atque odio nostrum
-      ratione quod. Nihil labore, quas necessitatibus excepturi neque,
-      aspernatur reprehenderit repudiandae amet odit temporibus quam sequi
-      minima consequatur, quaerat error fugit. Distinctio ducimus repellendus
-      itaque ipsa blanditiis enim tempora tempore maiores eveniet beatae odit
-      iusto, odio doloribus dolores voluptatum quod veritatis! Blanditiis hic
-      incidunt et placeat facere nemo eaque vero sequi mollitia, quaerat,
-      assumenda sed unde laudantium earum sint omnis esse eum minima excepturi,
-      necessitatibus atque. Asperiores, ducimus dolorum! Explicabo doloribus
-      iusto accusamus nesciunt, eos natus voluptatum odit placeat reiciendis sed
-      ducimus! Architecto aut, qui, reprehenderit inventore excepturi iusto
-      accusantium saepe officia distinctio cumque laboriosam? Sunt quaerat
-      placeat molestias vel earum, esse tempore aut sequi autem optio
-      dignissimos odit veniam enim blanditiis consectetur eos qui a tempora vero
-      labore quia nam amet aperiam quis? Facere repellat nostrum modi possimus
-      dolore! Accusamus expedita aperiam commodi repellat similique repudiandae
-      alias a consequatur quod soluta? Enim laboriosam delectus magni nulla
-      doloremque quia? Natus facilis beatae, ipsum veritatis repellat eum error
-      iusto illum distinctio, voluptatum aperiam numquam ad nisi ea, at
-      aspernatur nihil id accusantium nobis. Id repellendus officiis voluptate
-      perferendis sequi dolorum, quaerat debitis obcaecati, earum sit possimus
-      rerum consequatur. Impedit voluptatem doloremque non totam laboriosam
-      necessitatibus ex aut itaque! Beatae quaerat corrupti maiores quo? Neque
-      tempore nobis sunt amet maxime! Nostrum natus rerum consequatur eum
-      eveniet voluptate velit, iure dignissimos culpa nisi laboriosam mollitia
-      asperiores cumque ipsam assumenda consectetur quod porro suscipit optio,
-      beatae quasi. Voluptas ipsa odit, aliquid officiis quos eveniet quae cum
-      dicta quod suscipit, eaque quidem? Dolorem odio accusantium molestias
-      earum fugit facere est inventore, nostrum eum repellendus dolorum eveniet.
-      Consectetur illo totam vel eos obcaecati dolore hic veniam perferendis,
-      voluptates ex minus accusantium, dolorum laudantium velit vitae, doloribus
-      dolorem facere eum iure. Rerum distinctio sequi officia corporis nesciunt
-      dolore, inventore tenetur, cumque non assumenda dignissimos repellendus
-      quia, a vel qui quae dolor optio aliquam voluptatum! Velit autem fugit
-      maiores alias totam, aspernatur sapiente quae veniam, soluta aliquam in
-      commodi dolores modi exercitationem magni molestias vel tempora, sed
-      dolorum ratione placeat quasi at sunt consectetur. Sint voluptas incidunt
-      ullam pariatur ipsam modi, obcaecati ut numquam delectus dicta debitis.
-      Blanditiis earum iure dolorum? Eius placeat, sapiente ipsum dolor esse
-      velit dolores recusandae laudantium corporis consequatur. Delectus aliquam
-      natus mollitia iusto temporibus quidem animi accusantium, neque expedita
-      optio alias facilis fuga similique quis et vero dolores, tempore aperiam
-      eius hic nihil. Quos maiores in nesciunt repudiandae cupiditate voluptates
-      incidunt modi omnis vero. Cumque quis maxime doloribus nesciunt officiis
-      unde distinctio laborum ipsa praesentium dolores soluta eaque sed itaque
-      quae quisquam, similique amet aperiam veniam voluptatem quod nulla, neque
-      fugit? Dolorem reprehenderit enim iste maiores ab modi, hic quos sit cum
-      assumenda magnam eveniet tempora reiciendis ad earum ipsum molestiae error
-      id consectetur vero nobis in! Deserunt, dolores rem corrupti nihil alias
-      ex unde necessitatibus qui. Pariatur laborum harum voluptate delectus
-      quasi.
-    </p>
+    <section class="selling-points">
+      <ul class="observables">
+        <li class="observable" style="--delay: 0.1s">
+          <div class="content">
+            <p class="number fs-ht scalable">1</p>
+            <div class="text">
+              <div class="title fs-hs scalable">Actionable insights</div>
+              <div class="description fs-body scalable">
+                Optimize your products, improve customer satisfaction and stay
+                ahead of the competition with our product data analytics.
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="observable" style="--delay: 0.2s">
+          <div class="content">
+            <p class="number fs-ht scalable">2</p>
+            <div class="text">
+              <div class="title fs-hs scalable">Data-driven decisions</div>
+              <div class="description fs-body scalable">
+                Make data-driven decisions with our product data analytics. Our
+                AI-generated reports help you unlock insights hidden in your
+                product data.
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="observable" style="--delay: 0.3s">
+          <div class="content">
+            <p class="number fs-ht scalable">3</p>
+            <div class="text">
+              <div class="title fs-hs scalable">Always affordable</div>
+              <div class="description fs-body scalable">
+                Always affordable pricing that scales with your business. Get
+                top-quality product data analytics services without hidden costs
+                or unexpected fees.
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="cta">
+      <div class="content">
+        <div class="image">
+          <img
+            src="./src/assets/images/image-founder.webp"
+            alt="image of a man"
+          />
+          <div class="grid"></div>
+        </div>
+        <div class="card">
+          <p class="fs-hm scalable">Be the first to test</p>
+          <p class="fs-body scalable">
+            Hi, I'm Louis Graham, the founder of the company. Book a demo call
+            with me to become a beta tester for our app and kickstart your
+            company. Apply for access below and I’ll be in touch to schedule a
+            call.
+          </p>
+          <a href="https://4chan.org/g" target="_blank" class="button-primary"
+            >Apply for access</a
+          >
+          <svg
+            width="221"
+            height="212"
+            viewBox="0 0 221 212"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M124.904 116.341C135.718 100.896 148.649 89.1422 160.791 82.6132C172.961 76.0688 184.192 74.8417 191.758 80.1401C199.325 85.4385 202.013 96.4111 200.026 110.086C198.043 123.729 191.421 139.899 180.606 155.344C169.792 170.789 156.862 182.543 144.72 189.072C132.549 195.616 121.319 196.843 113.752 191.545C106.185 186.246 103.497 175.274 105.484 161.599C107.467 147.956 114.09 131.785 124.904 116.341Z"
+              stroke="#44FFA1"
+              style="--delay: 0.1s"
+            />
+            <path
+              d="M103.606 101.428C114.421 85.9832 127.351 74.2293 139.493 67.7002C151.663 61.1559 162.894 59.9288 170.46 65.2271C178.027 70.5255 180.715 81.4981 178.728 95.173C176.746 108.816 170.123 124.986 159.308 140.431C148.494 155.876 135.564 167.63 123.422 174.159C111.251 180.703 100.021 181.93 92.4541 176.632C84.8872 171.333 82.1993 160.361 84.1865 146.686C86.1689 133.043 92.7916 116.873 103.606 101.428Z"
+              stroke="#44FFA1"
+              style="--delay: 0.2s"
+            />
+            <path
+              opacity="0.75"
+              d="M83.1273 87.0884C93.9423 71.6429 106.828 59.8563 118.897 53.2754C130.996 46.6779 142.121 45.3839 149.572 50.6009C157.023 55.8179 159.612 66.7148 157.55 80.341C155.494 93.9331 148.825 110.073 138.01 125.518C127.195 140.964 114.31 152.75 102.241 159.331C90.1416 165.929 79.0163 167.223 71.5657 162.006C64.1151 156.789 61.5259 145.892 63.5873 132.265C65.6435 118.673 72.3122 102.534 83.1273 87.0884Z"
+              stroke="#44FFA1"
+              style="--delay: 0.3s"
+            />
+            <path
+              opacity="0.5"
+              d="M61.0102 71.6019C71.8246 56.1572 84.7549 44.4033 96.897 37.8742C109.068 31.3299 120.298 30.1028 127.865 35.4011C135.431 40.6995 138.119 51.6721 136.132 65.347C134.15 78.9898 127.527 95.1604 116.713 110.605C105.898 126.05 92.9677 137.804 80.8257 144.333C68.6551 150.877 57.425 152.104 49.8581 146.806C42.2913 141.507 39.6034 130.535 41.5906 116.86C43.573 103.217 50.1957 87.0465 61.0102 71.6019Z"
+              stroke="#44FFA1"
+              style="--delay: 0.4s"
+            />
+            <path
+              opacity="0.25"
+              d="M39.7122 56.6889C50.5273 41.2434 63.4126 29.4568 75.4816 22.8758C87.5811 16.2784 98.7064 14.9844 106.157 20.2014C113.608 25.4183 116.197 36.3153 114.135 49.9415C112.079 63.5335 105.41 79.673 94.5954 95.1185C83.7804 110.564 70.895 122.351 58.826 128.932C46.7266 135.529 35.6012 136.823 28.1506 131.606C20.7 126.389 18.1108 115.492 20.1722 101.866C22.2284 88.2739 28.8972 72.1344 39.7122 56.6889Z"
+              stroke="#44FFA1"
+              style="--delay: 0.5s"
+            />
+          </svg>
+        </div>
+      </div>
+    </section>
+    <footer></footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
